--- a/borsachart/frontend/src/styles/App.css
+++ b/borsachart/frontend/src/styles/App.css
@@ -23,6 +23,85 @@ div[id^='highcharts-']{
 }
 
 .input-container {
+    margin: 0.5vh 0;
     height: 35%;
     height: 35vh;
+    -webkit-box-shadow: 0px 0px 5px 0px #ccc;
+            box-shadow: 0px 0px 5px 0px #ccc;
+    display: flex;
+    -webkit-flex-direction: row;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+}
+
+.column {
+    -webkit-flex-basis: 100%;
+            flex-basis: 100%;
+}
+
+.input-block {
+    -webkit-flex: 2;
+        -ms-flex: 2;
+            flex: 2;
+        -webkit-align-self: center;
+                align-self: center;
+}
+
+.inputs-block {
+    -webkit-flex: 8;
+        -ms-flex: 8;
+            flex: 8;
+}
+
+.block-desc, .block-title {
+    text-align: center;
+    margin-top: 0;
+}
+
+.block-desc a {
+    text-decoration: none;
+    display: block;
+    color: lightgreen;
+    font-weight: 600;
+}
+
+.block-form {
+    text-align: center;
+}
+
+.block-form-input {
+    display: block;
+    position: relative;
+    width: 100%;
+    max-width: 180px;
+    margin: auto;
+    padding: 10px 15px;
+    border: 1px solid #ccc;
+}
+
+.block-form-input.error {
+    border-color: red;
+}
+
+.block-form-submit {
+    margin-top: 1em;
+    padding: 10px 30px;
+    background-color: lightblue;
+    border: none;
+    color: #FFF;
+    font-weight: 600;
+    cursor: pointer;
+    text-transform: uppercase;
+    -webkit-transition: all 0.2s linear;
+       -moz-transition: all 0.2s linear;
+        -ms-transition: all 0.2s linear;
+         -o-transition: all 0.2s linear;
+            transition: all 0.2s linear;
+}
+
+.block-form-submit:hover {
+    background-color: purple;
 }
