--- a/borsachart/frontend/src/styles/App.css
+++ b/borsachart/frontend/src/styles/App.css
@@ -35,6 +35,7 @@ div[id^='highcharts-']{
     -webkit-flex-wrap: wrap;
         -ms-flex-wrap: wrap;
             flex-wrap: wrap;
+    overflow: hidden;
 }
 
 .column {
@@ -88,6 +89,8 @@ div[id^='highcharts-']{
 
 .block-form-submit {
     margin-top: 1em;
+}
+.btn {
     padding: 10px 30px;
     background-color: lightblue;
     border: none;
@@ -102,7 +105,7 @@ div[id^='highcharts-']{
             transition: all 0.2s linear;
 }
 
-.block-form-submit:hover {
+.btn:hover {
     background-color: purple;
 }
 
@@ -121,4 +124,80 @@ div[id^='highcharts-']{
 }
 .notfound.show{
     opacity: 1;
+}
+
+.tickers {
+    height: 33%;
+    height: 33vh;
+    -ms-overflow-y: auto;
+        overflow-y: auto;
+    display: flex;
+    -webkit-flex-direction: row;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+}
+
+.ticker {
+    position: relative;
+    width: 33.333%;
+}
+
+.ticker-text {
+    text-transform: uppercase;
+    margin: 15px;
+}
+.ticker-text--title {
+    margin: auto;
+}
+
+.ticker-text--latestdata {
+    margin: 0 0 10px;
+}
+
+.ticker-text--data {
+    width: 100%;
+    display: flex;
+    -webkit-flex-direction: row;
+        -ms-flex-direction: row;
+            flex-direction: row;
+        -webkit-flex-wrap: wrap;
+            -ms-flex-wrap: wrap;
+                flex-wrap: wrap;
+}
+.ticker-text--info {
+    width: 33.3333%;
+    margin: 0;
+    font-size: 0.7em;
+}
+
+.ticker-text--info:first-child {
+    color: lightgreen;
+}
+
+.ticker-text--info:nth-child(2) {
+    color: blue;
+}
+
+.ticker-text--info:nth-child(3) {
+    color: red;
+}
+
+.ticker-text--info:nth-child(4) {
+    color: green;
+}
+
+.ticker-text--info:nth-child(5) {
+    color: pink;
+}
+
+.ticker--remove {
+    padding: 5px 10px;
+    background-color: #ff4040;
+    display: block;
+    max-width: 100px;
+    font-size: 0.8em;
+    text-align: center;
 }
